// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <CheckboxInput /> rendering should render checkbox correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "value": "Ja, dat is goed",
        }
      }
      touched={false}
    >
      <div
        className="antwoorden"
      >
        <div
          className="antwoord"
        >
          <input
            defaultChecked={true}
            id="input-field-name"
            name="input-field-name"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="input-field-name"
          >
            Ja, dat is goed
          </label>
        </div>
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <CheckboxInput /> rendering should render multi checkbox correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "values": Object {
            "blue": "Blauw",
            "green": "Groen",
            "red": "Rood",
          },
        }
      }
      touched={false}
    >
      <div
        className="antwoorden"
      >
        <div>
          <input
            type="hidden"
            value={
              Array [
                "blue",
              ]
            }
          />
          <div
            className="antwoord"
            key="Rood"
          >
            <input
              id="input-field-name-red1"
              name="input-field-name-red1"
              onClick={[Function]}
              type="checkbox"
              value="red"
            />
            <label
              htmlFor="input-field-name-red1"
            >
              Rood
            </label>
          </div>
          <div
            className="antwoord"
            key="Blauw"
          >
            <input
              id="input-field-name-blue1"
              name="input-field-name-blue1"
              onClick={[Function]}
              type="checkbox"
              value="blue"
            />
            <label
              htmlFor="input-field-name-blue1"
            >
              Blauw
            </label>
          </div>
          <div
            className="antwoord"
            key="Groen"
          >
            <input
              id="input-field-name-green1"
              name="input-field-name-green1"
              onClick={[Function]}
              type="checkbox"
              value="green"
            />
            <label
              htmlFor="input-field-name-green1"
            >
              Groen
            </label>
          </div>
        </div>
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <CheckboxInput /> rendering should render multi checkbox without value correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "values": Object {
            "blue": "Blauw",
            "green": "Groen",
            "red": "Rood",
          },
        }
      }
      touched={false}
    >
      <div
        className="antwoorden"
      >
        <div>
          <input
            type="hidden"
          />
          <div
            className="antwoord"
            key="Rood"
          >
            <input
              id="input-field-name-red1"
              name="input-field-name-red1"
              onClick={[Function]}
              type="checkbox"
              value="red"
            />
            <label
              htmlFor="input-field-name-red1"
            >
              Rood
            </label>
          </div>
          <div
            className="antwoord"
            key="Blauw"
          >
            <input
              id="input-field-name-blue1"
              name="input-field-name-blue1"
              onClick={[Function]}
              type="checkbox"
              value="blue"
            />
            <label
              htmlFor="input-field-name-blue1"
            >
              Blauw
            </label>
          </div>
          <div
            className="antwoord"
            key="Groen"
          >
            <input
              id="input-field-name-green1"
              name="input-field-name-green1"
              onClick={[Function]}
              type="checkbox"
              value="green"
            />
            <label
              htmlFor="input-field-name-green1"
            >
              Groen
            </label>
          </div>
        </div>
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <CheckboxInput /> rendering should render no checkbox when not visible 1`] = `
<div
  className=""
/>
`;
